--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.17",
+    "nodemailer": "^6.4.10",
     "react-moment": "^0.9.7",
     "request": "^2.88.2"
   },
