--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "cd client & npm run build",
     "install-client": "cd client & npm install",
-    "heroku-postbuild": "npm run install-client & npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
